fix: Fixed alignment

--- a/Skills/styles.css
+++ b/Skills/styles.css
@@ -23,8 +23,9 @@
   flex-wrap: wrap;
   width: 80%;
   max-width: 1200px;
-  margin-top: 2em;
+  margin: 2em auto; 
 }
+
 
 .skill {
   min-width: 240px;
